pushgateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pushgateway
  labels:
    app: pushgateway
spec:
  to:
    kind: Service
    name: pushgateway
  port:
    targetPort: 9091
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
